# grocry

./: .gitignore  Dockerfile  pyproject.toml
.cursor/: mcp.json
frontend/: App.tsx  GROCERY_APP_FEATURES.md  cesconfig.jsonc  package-lock.json  package.json
frontend/components/: GroceryApp.tsx
frontend/hooks/: index.ts  useApiHealth.ts  useProductsByPrice.ts
frontend/services/: api.ts
grocry/: __main__.py
grocry/api/: __main__.py  app.py  config.py  db.py
grocry/crawl/: safeway.py  starmarket.py  stopandshop.py  traderjoe.py
grocry/crawl/core/: db.py
